# CodeOverview

./: .gitignore  CodeOverview.hs  CodeOverview.vim  Makefile  OverviewWindow.sln  README.txt  build.ps1  codeOverview.cabal  codeOverviewMain.hs  codeoverview.hs  deploy.ps1  gtkOverview.py  png.hs
CodeOverMac/: CodeOverMacAppDelegate.h  CodeOverMacAppDelegate.m  CodeOverMac_Prefix.pch  FileWatcher.h  FileWatcher.m  main.m
CodeOverMac/CodeOverMac.xcodeproj/: project.pbxproj
CodeOverMac/English.lproj/: MainMenu.xib
CodeOverview/doc/: codeoverview.txt
CodeOverview/plugin/: CodeOverview.vim  gtkOverview.py
CodeOverview/syntax/: codeoverview.vim
CodeOverviewGenerator/: ByteString.hs  CodeOverview.hs  Color.hs  DiffOverlay.hs  GraphCreator.hs  Language.hs  LanguageAssociation.hs
CodeOverviewGenerator/Language/: C.hs  Cpp.hs  Haskell.hs  Html.hs  Java.hs  Objc.hs  Ocaml.hs  Perl.hs  Python.hs  Ruby.hs  Shell.hs  Vim.hs
CppOverview/: CppOverview.aps  CppOverview.cpp  CppOverview.rc  CppOverview.vcproj  ReadMe.txt  resource.h  stdafx.cpp  stdafx.h
WinFormOverview/: FileWatcher.cs  Program.cs  ViewWindow.Designer.cs  ViewWindow.cs  WinFormOverview.csproj
WinFormOverview/Properties/: AssemblyInfo.cs  Resources.Designer.cs  Settings.Designer.cs
WpfOverview/: App.xaml  App.xaml.cs  FileWatcher.cs  ViewWindow.xaml  ViewWindow.xaml.cs  WinSys.cs  Window1.xaml  Window1.xaml.cs  WpfOverview.csproj
WpfOverview/Properties/: AssemblyInfo.cs  Resources.Designer.cs  Settings.Designer.cs
